2014-10-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Simplify nvti cache API by moving the cache variable handling to
	nvticache.c file instead of by the API caller.

	* base/nvticache.c (nvticache): New variable for nvti cache.
	(nvticache_new): Rename to nvticache_new(), set the nvticache variable
	and return void.
	(nvticache_free, nvticache_get, nvticache_add, nvticache_get_by_oid)
	(nvticache_get_src_by_oid): Use nvticache variable, remove cache
	function argument.

	* base/nvticache.h: Adjust functions prototypes.

	* misc/plugutils.c (proto_post_wrapped, get_plugin_preference): Adjust
	nvticache_get_by_oid() calls.

2014-10-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvti_pref): Constify return value.
	(nvti_to_keyfile, nvti_clone): Adjsut nvti_pref() calls.

	* base/nvti.h, base/nvticache.h, misc/plugutils.h: Adjust functions
	prototypes.

	* base/nvticache.c (nvticache_get): Constify return value. Remove
	extraneous nvti cloning.

	* misc/plugutils.c (plug_create_from_nvti_and_prefs): Constify function
	argument and variable.

2014-10-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_builtin_synscan.c (add_packet): Replaced emalloc() by
	g_malloc0().
	(rm_packet, rm_dead_packets, scan): Replaced efree() by g_free().

	* nasl/nasl_builtin_find_service.c (mark_smtp_server, mark_snpp_server,
	mark_ftp_server): Replaced emalloc() by g_malloc0() and efree() by
	g_free().
	(mark_pop_server): Replaced estrdup() by g_strdup() and efree() by
	g_free().
	(plugin_do_run): Replaved efree() by g_free(), estrdup() by g_strdup()
	and emalloc() by g_malloc0().
	(fwd_data): Replaced efree() by g_free().
	(plugin_run_find_service): Replaced emalloc() by g_malloc0().

2014-10-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/exec.c, nasl/lint.c, nasl/nasl_cmd_exec.c, nasl/nasl_crypto.c,
	nasl/nasl_http.c, nasl/nasl_misc_funcs.c, nasl/nasl_packet_forgery.c,